--- a/sass/main.scss
+++ b/sass/main.scss
@@ -8,8 +8,18 @@
 @import "base/utilities";
 
 @import "components/button";
+@import "components/bg-video";
+@import "components/form";
+@import "components/composition";
+@import "components/feature-box";
+@import "components/popup";
+@import "components/card";
+@import "components/story";
 
 @import "layout/header";
+@import "layout/footer";
+@import "layout/navigation";
+@import "layout/grid";
 
 @import "pages/home";
 
