--- a/sass/components/_popup.scss
+++ b/sass/components/_popup.scss
@@ -22,6 +22,10 @@
     opacity: 0;
     transform: translate(-50%, -50%) scale(.25);
     transition: all .5s .2s;
+
+    @include respond(tablet-port) {
+      width: 95%;
+    }
   }
 
   &__left {
